tests/bad/B_ModuleName.ml
-- Name should be a single ident.
module type Module.Submodule = sig
    val f of int -> int -> int
end;;